green with explanations